Fix z-index issues in BlockView

--- a/src/client/src/components/flow/flow.scss
+++ b/src/client/src/components/flow/flow.scss
@@ -191,7 +191,7 @@
 }
 
 .react-flow__edges {
-  z-index: 4 !important;
+  z-index: 2;
 }
 
 .react-flow__handle.connectable {
